--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,3 +1,4 @@
+tap "candid82/brew"
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/cask-drivers"
@@ -7,14 +8,25 @@ tap "homebrew/core"
 tap "homebrew/services"
 tap "jesseduffield/lazygit"
 tap "koekeishiya/formulae"
+tap "yqrashawn/goku"
 brew "aom"
+brew "python@3.11"
+brew "asciinema"
 brew "coreutils"
 brew "asdf"
 brew "bat"
+brew "libssh2"
+brew "openldap"
+brew "rtmpdump"
 brew "curl"
+brew "exa"
 brew "exiftool"
 brew "fd"
+brew "openssl@1.1"
 brew "gnutls"
+brew "harfbuzz"
+brew "srt"
+brew "tesseract"
 brew "ffmpeg"
 brew "fzf"
 brew "gh"
@@ -24,9 +36,12 @@ brew "gnupg"
 brew "go"
 brew "imagemagick"
 brew "jq"
+brew "libssh"
+brew "lima"
+brew "m-cli"
 brew "mas"
 brew "miller"
-brew "python@3.11"
+brew "mosh"
 brew "yt-dlp"
 brew "mpv"
 brew "neofetch"
@@ -34,13 +49,16 @@ brew "neovim"
 brew "nmap"
 brew "rclone"
 brew "ripgrep"
+brew "samba"
 brew "scrcpy"
 brew "smug"
 brew "stow"
 brew "tmux"
 brew "tree"
+brew "unar"
 brew "usbutils"
 brew "wallpaper"
+brew "watchexec"
 brew "wget"
 brew "zig"
 brew "zoxide"
@@ -48,6 +66,7 @@ brew "zsh"
 brew "jesseduffield/lazygit/lazygit"
 brew "koekeishiya/formulae/skhd"
 brew "koekeishiya/formulae/yabai"
+brew "yqrashawn/goku/goku"
 cask "alacritty"
 cask "android-platform-tools"
 cask "audacity"
@@ -68,6 +87,7 @@ cask "iina"
 cask "inso"
 cask "insomnia"
 cask "itsycal"
+cask "jellyfin-media-player"
 cask "karabiner-elements"
 cask "keycastr"
 cask "kitty"
@@ -91,6 +111,7 @@ cask "slack"
 cask "spotify"
 cask "stats"
 cask "telegram-desktop"
+cask "thunderbird"
 cask "topnotch"
 cask "tor-browser"
 cask "visual-studio-code"
@@ -113,6 +134,8 @@ vscode "apvarun.celestial"
 vscode "atomiks.moonlight"
 vscode "barrsan.reui"
 vscode "be5invis.vscode-custom-css"
+vscode "betterthantomorrow.calva"
+vscode "betterthantomorrow.calva-spritz"
 vscode "bradlc.vscode-tailwindcss"
 vscode "cdonohue.quill-icons"
 vscode "CrucialHuman.crucial-human"
