--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,7 +8,7 @@ set -sg terminal-overrides ",*:RGB"
 # change prefix key to C-a
 unbind C-b
 set -g prefix C-a
-bind -r C-a send-prefix
+# bind -r C-a send-prefix
 
 set -g mouse on
 
