--- a/skhd/.skhdrc
+++ b/skhd/.skhdrc
@@ -2,10 +2,14 @@
 alt - return : /Applications/Alacritty.app/Contents/MacOS/alacritty
 
 # restart yabai
-alt + shift - r : launchctl kickstart -k "gui/${UID}/homebrew.mxcl.yabai"
+alt + shift - r : yabai --restart-service
 
 # reload skhd config
 alt - r : skhd -r
+
+# close
+alt - w : skhd -k "cmd - w"
+alt - q : skhd -k "cmd - q"
 
 # focus window
 alt - h : yabai -m window --focus west
