--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -14,7 +14,7 @@ font:
   size: 14.0
 
   normal:
-    family: JetBrainsMono Nerd Font Mono
+    family: SFMono Nerd Font
     style: Regular
 
   bold:
